--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <title>hi</title>
 </head>
 <body>
-<div class="btn"><b>Start simulation</b></div>
+<div class="btn" onclick="inputEvent()"><b>Start simulation</b></div>
 <div class="input"></div>
 <script src="p5.js"></script>
 <script src="Vector.js"></script>
