Drag & Drop now rotates properly (for the most part...)

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
 <div class="btn" onclick="inputEvent()"><b>Start simulation</b></div>
 <div class="input"></div>
 <script src="p5.js"></script>
+<script src="CollisionDetection.js"></script>
 <script src="Vector.js"></script>
 <script src="Pendulum.js"></script>
 <script src="Main.js"></script>
