Bug fixes, to-do: optimizations + gui

--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
 <div class="btn" onclick="inputEvent()"><b>Start simulation</b></div>
 <div class="input"></div>
 <script src="p5.js"></script>
+<script src="quicksettings.js"></script>
+<script src="p5.gui.js"></script>
 <script src="CollisionDetection.js"></script>
 <script src="Vector.js"></script>
 <script src="Pendulum.js"></script>
