--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
+
+        @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');
+
         body {
             margin: 0;
             padding: 0;
@@ -14,50 +17,307 @@
             display: block;
         }
 
-        .btn {
+        .restartBtn {
             position: absolute;
             width: 100%;
             white-space: nowrap;
-            max-width: 7vw;
+            max-width: 60px;
             text-align: center;
-            background-color: #fffad3;
-            color: hsl(344, 100%, 66%);
-            border-style: solid;
-            border-color: hsl(344, 100%, 66%);
-            border-radius: 15px;
+            background-color: #fcfcfc;
+            color: #262626;
+            font-weight: 300;
+            border-radius: 20px;
             border-width: 1px;
             padding: 0.8em 1.4em 0.8em 1.4em;
             transition-duration: 0.2s;
-            font-family: 'Open Sans', sans-serif;
+            font-family: 'Montserrat', sans-serif;
             box-shadow: 1px 1px 10px -4px #c9c9c9;
             font-size: 13px;
             z-index: 1;
-            left: 20px;
-            top: 20px;
+            left: 200px;
+            top: 310px;
+            opacity: 0.7;
         }
 
-        .btn:hover {
-            color: hsl(30, 93%, 60%);
-            border-color: hsl(25, 93%, 60%);
+        .restartBtn:hover {
+            color: #1a98ff;
+            border-color: #1a98ff;
             cursor: pointer;
+            opacity: 0.9;
         }
 
-        .btn:active {
+        .restartBtn:active {
             transform: scale(0.95);
         }
 
+        .sliderContainer {
+            width: 100%;
+        }
+
+        .sliderBg {
+            position: absolute;
+            -webkit-appearance: none;
+            width: 100%;
+            max-width: 230px;
+            height: 42px;
+            outline: none;
+            background: #fcfcfc;
+            opacity: 0.4;
+            border-radius: 20px;
+            left: 50px;
+            top: 90px;
+            z-index: 1;
+        }
+
+        .slider {
+            position: absolute;
+            -webkit-appearance: none;
+            appearance: none;
+            width: 100%;
+            max-width: 190px;
+            height: 2px;
+            background: #fcfcfc;
+            outline: none;
+            -webkit-transition: .2s;
+            transition: opacity .2s;
+            z-index: 2;
+            border-radius: 25px;
+            overflow: hidden;
+
+        }
+
+        .slider::-webkit-slider-thumb {
+            -webkit-appearance: none;
+            appearance: none;
+            width: 15px;
+            height: 15px;
+            background: #0ca5ea;
+            border-radius: 50px;
+            cursor: pointer;
+            box-shadow: -90px 0 0 90px #5ec6ff;
+        }
+
+        .slider::-moz-range-thumb {
+            width: 25px;
+            height: 25px;
+            background: #21b1ee;
+            cursor: pointer;
+            box-shadow: -90px 0 0 90px #5ec6ff;
+        }
+
+        .pendulumNum {
+            position: absolute;
+            font-family: 'Montserrat', sans-serif;
+            top: 68px;
+            font-size: 13px;
+            left: 55px;
+            z-index: 4;
+            font-weight: 700;
+            color: #505050;
+        }
+
+        .sliderValue {
+            position: absolute;
+            font-family: 'Montserrat', sans-serif;
+            font-size: 13px;
+            z-index: 4;
+            font-weight: 900;
+            color: #252525;
+        }
+
+        .bigContainer {
+            position: absolute;
+            -webkit-appearance: none;
+            width: 100%;
+            max-width: 270px;
+            height: 250px;
+            outline: none;
+            background: #fcfcfc;
+            opacity: 0.4;
+            border-radius: 20px;
+            left: 30px;
+            top: 50px;
+            z-index: 0;
+        }
+
+        .inputBox {
+            position: absolute;
+            -webkit-appearance: none;
+            width: 100%;
+            max-width: 230px;
+            height: 42px;
+            outline: none;
+            background: #fcfcfc;
+            opacity: 0.4;
+            border-radius: 20px;
+            left: 50px;
+            top: 170px;
+            z-index: 1;
+        }
+
+        .frictionTitle {
+            position: absolute;
+            font-family: 'Montserrat', sans-serif;
+            top: 148px;
+            font-size: 13px;
+            left: 55px;
+            z-index: 4;
+            font-weight: 700;
+            color: #505050;
+        }
+
+        input[type=text] {
+            position: absolute;
+            width: 100%;
+            padding: 12px 20px;
+            margin: 8px 0;
+            box-sizing: border-box;
+            max-width: 190px;
+            left: 50px;
+            top: 165px;
+            z-index: 2;
+            background: transparent;
+            border: none;
+            outline: none;
+            -webkit-box-shadow: none;
+            -moz-box-shadow: none;
+            box-shadow: none;
+            color: #505050;
+            font-family: 'Montserrat', sans-serif;
+            font-size: 13px;
+        }
+
+        #sliderPendulums {
+            left: 70px;
+            top: 110px;
+        }
+
+        #sliderFriction {
+            left: 70px;
+            top: 190px;
+        }
+
+        #sliderPendValue {
+            top: 68px;
+            left: 137px;
+        }
+
+        #sliderFrValue {
+            position: absolute;
+            top: 148px;
+            left: 107px;
+        }
+
+        .switch {
+            position: absolute;
+            z-index: 2;
+            width: 100%;
+            max-width: 230px;
+            height: 28px;
+            left: 50px;
+            top: 240px;
+        }
+
+        .switch input {
+            opacity: 0;
+            width: 0;
+            height: 0;
+        }
+
+        .switchToggle {
+            position: absolute;
+            cursor: pointer;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background-color: #dff0f7;
+            -webkit-transition: .4s;
+            transition: .4s;
+            border-radius: 34px;
+        }
+
+        .switchToggle:before {
+            position: absolute;
+            content: "";
+            height: 20px;
+            width: 20px;
+            left: 4px;
+            bottom: 4px;
+            background-color: #69b9ff;
+            -webkit-transition: .4s;
+            transition: .4s;
+            border-radius: 50%;
+        }
+
+
+        input:checked + .switchToggle {
+            content: 'rk4';
+            background-color: #69b9ff;
+        }
+
+        input:focus + .switchToggle {
+            box-shadow: 0 0 1px #69b9ff;
+        }
+
+        input:checked + .switchToggle:before {
+            -webkit-transform: translateX(202px);
+            -ms-transform: translateX(202px);
+            transform: translateX(202px);
+            background-color: #dff0f7;
+        }
+
+        .switchToggle:after {
+            content:'semi-implicit euler';
+            color: #363636;
+            position: absolute;
+            transform: translate(-50%,-50%);
+            top: 50%;
+            left: 50%;
+            font-size: 12px;
+            font-weight: 800;
+            font-family: 'Montserrat', sans-serif;
+        }
+        input:checked + .switchToggle:after {
+            color: #dff0f7;
+            content: 'runge-kutta 4';
+        }
+
     </style>
-    <title>hi</title>
+    <title>Newton's Cradle</title>
+    <link rel="icon" type="image/x-icon" href="https://cdn-icons-png.flaticon.com/512/887/887899.png">
 </head>
 <body>
-<div class="btn" onclick="inputEvent()"><b>Start simulation</b></div>
+
+<div class="restartBtn" onclick="restartSim()"><b>restart</b></div>
 <div class="input"></div>
+<div class="frictionTitle">friction:</div>
+<div class="sliderValue" id="sliderFrValue"></div>
+<div class="frictionInput">
+    <input type="range" min="0.9" max="1" value="1" step="0.001" class="slider" id="sliderFriction">
+</div>
+
+<div class="bigContainer"></div>
+<div class="sliderBg">
+</div>
+<div class="sliderContainer">
+    <input type="range" min="1" max="11" value="5" class="slider" id="sliderPendulums">
+</div>
+<div class="inputBox"></div>
+<label class="switch">
+    <input type="checkbox">
+    <span class="switchToggle"></span>
+</label>
+
+<label class="switch">
+    <input type="checkbox" checked id="algorithmCheck">
+    <span class="switchToggle"></span>
+</label>
+<div class="sliderValue" id="sliderPendValue"></div>
+<div class="pendulumNum">pendulums:</div>
 <script src="p5.js"></script>
-<script src="quicksettings.js"></script>
-<script src="p5.gui.js"></script>
-<script src="CollisionDetection.js"></script>
-<script src="Vector.js"></script>
 <script src="Pendulum.js"></script>
 <script src="Main.js"></script>
+
 </body>
 </html>
