--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
 <div class="frictionTitle">coefficient of restitution:</div>
 <div class="sliderValue" id="sliderFrValue"></div>
 <div class="frictionInput">
-    <input type="range" min="0.9" max="1" value="1" step="0.001" class="slider" id="sliderFriction">
+    <input type="range" min="0" max="1" value="1" step="0.05" class="slider" id="sliderFriction">
 </div>
 
 <div class="bigContainer"></div>
@@ -332,6 +332,7 @@
 <div class="pendulumNum">pendulums:</div>
 <script src="p5.js"></script>
 <script src="Pendulum.js"></script>
+<script src="Island.js"></script>
 <script src="CollisionManifold.js"></script>
 <script src="Collision.js"></script>
 <script src="Main.js"></script>
